<resources>
    <string name="app_name">Nowmeal</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_food_list">Food List</string>
    <string name="menu_food_detail">Food Detail</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_cart">Cart</string>
    <string name="home_second">Home Second</string>


    <!-- home activity strings -->
    <string name="popular_categories">Popular Categories</string>
    <string name="best_deals">Best Deals</string>


    <!-- Admin drawer -->
    <string name="title_activity_admin_home">AdminHomeActivity</string>
    <string name="admin_navigation_drawer_open">Open navigation drawer</string>
    <string name="admin_navigation_drawer_close">Close navigation drawer</string>
    <string name="admin_nav_header_title">Android Studio</string>
    <string name="admin_nav_header_subtitle">android.studio@android.com</string>
    <string name="admin_nav_header_desc">Navigation header</string>
    <string name="admin_action_settings">Settings</string>
    <string name="admin_menu_category">Categories</string>
    <string name="admin_menu_food_list">Food List</string>
    <string name="admin_menu_slideshow">Slideshow</string>
    <string name="admin_home_second">Home Second</string>


    <!-- Shipper drawer -->
    <string name="shipper_title_activity_home_shipper">HomeShipperActivity</string>
    <string name="shipper_navigation_drawer_open">Open navigation drawer</string>
    <string name="shipper_navigation_drawer_close">Close navigation drawer</string>
    <string name="shipper_nav_header_title">Android Studio</string>
    <string name="shipper_nav_header_subtitle">android.studio@android.com</string>
    <string name="shipper_nav_header_desc">Navigation header</string>
    <string name="shipper_action_settings">Settings</string>

    <string name="shipper_menu_home">Home</string>
    <string name="shipper_menu_gallery">Gallery</string>
    <string name="shipper_menu_slideshow">Slideshow</string>

    <string name="shipper_home_second">Home Second</string>


    <!-- food detail fragment strings -->
    <string name="size">Size</string>
    <string name="add_on">Addon</string>
    <string name="action_clear_cart">Clear Cart</string>
    <string name="menu_sign_out">Sign out</string>

</resources>
