<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
    </group>
    <group>
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/menu_categories" />

    </group>

    <group>
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/menu_cart" />


    </group>


    <group>
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_sign_out" />


    </group>

    <!--        <item-->
    <!--            android:id="@+id/nav_food_list"-->
    <!--            android:icon="@drawable/ic_menu_gallery"-->
    <!--            android:title="@string/menu_food_list" />-->

    <!--        <item-->
    <!--            android:id="@+id/nav_food_detail"-->
    <!--            android:icon="@drawable/ic_menu_slideshow"-->
    <!--         android:title="@string/menu_food_detail" />-->

</menu>
