<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shipper_mobile_navigation"
    app:startDestination="@+id/shipper_nav_home">

    <fragment
        android:id="@+id/shipper_nav_home"
        android:name="com.example.nowmeal.shipper.ui.home.HomeFragment"
        android:label="@string/shipper_menu_home"
        tools:layout="@layout/fragment_shipper_home">

        <action
            android:id="@+id/shipper_action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/shipper_nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/shipper_nav_home_second"
        android:name="com.example.nowmeal.shipper.ui.home.HomeSecondFragment"
        android:label="@string/shipper_home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/shipper_action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/shipper_nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/shipper_nav_gallery"
        android:name="com.example.nowmeal.shipper.ui.gallery.GalleryFragment"
        android:label="@string/shipper_menu_gallery"
        tools:layout="@layout/fragment_shipper_gallery" />

    <fragment
        android:id="@+id/shipper_nav_slideshow"
        android:name="com.example.nowmeal.shipper.ui.slideshow.SlideshowFragment"
        android:label="@string/shipper_menu_slideshow"
        tools:layout="@layout/fragment_shipper_slideshow" />
</navigation>