<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/admin_nav_category">

    <fragment
        android:id="@+id/admin_nav_category"
        android:name="com.example.nowmeal.admin.ui.category.CategoryFragment"
        android:label="@string/admin_menu_category"
        tools:layout="@layout/fragment_admin_category">

        <action
            android:id="@+id/admin_action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/admin_nav_home_second"
        android:name="com.example.nowmeal.admin.ui.category.HomeSecondFragment"
        android:label="@string/admin_home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/admin_action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/admin_nav_gallery"
        android:name="com.example.nowmeal.admin.ui.gallery.GalleryFragment"
        android:label="@string/admin_menu_gallery"
        tools:layout="@layout/fragment_admin_gallery" />

    <fragment
        android:id="@+id/admin_nav_slideshow"
        android:name="com.example.nowmeal.admin.ui.slideshow.SlideshowFragment"
        android:label="@string/admin_menu_slideshow"
        tools:layout="@layout/fragment_admin_slideshow" />
</navigation>